--- a/test1.html
+++ b/test1.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="color-list">
-    <div class="color-item yellow">Желтый</div>
-    <div class="color-item red">Красный</div>
-    <div class="color-item blue">Синий</div>
-    <div class="color-item green">Зеленый</div>
-    <div class="color-item black">Чёрный</div>
+    <div class="color-item" data-color="yellow">Желтый</div>
+    <div class="color-item" data-color="red">Красный</div>
+    <div class="color-item" data-color="blue">Синий</div>
+    <div class="color-item" data-color="green">Зеленый</div>
+    <div class="color-item" data-color="black">Чёрный</div>
 </div>
 
     <div class="square" id="square" style="background-color: black;"></div>
